[tool.poetry]
name = "parat"
version = "0.1.0"
description = ""
authors = ["Jonathan Lee <jonathan.lee.devel@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
