[tool.poetry]
name = "parat"
version = "0.1.0"
description = "Packaging and Release Automation Tool"
authors = ["Jonathan Lee <jonathan.lee.devel@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
pylint = "^3.0.2"
typeguard = "^4.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
